# bentoml-test

./: Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yaml
bentoml_test/app/: main.py
bentoml_test/models/: train_dummy_model.py
scripts/: code_quality.py
